# pycpl

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  update-index.sh
.github/workflows/: build-wheels.yml  python-publish.yml
cmake/: FindCPL.cmake  FindHDRL.cmake
cpl-7.3.2/: Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure
cpl-7.3.2/admin/: doxygen.am
cpl-7.3.2/cplcore/: Makefile.am  Makefile.in  cpl_array_impl.h  cpl_bivector.c  cpl_cfitsio.h  cpl_column.c  cpl_error.c  cpl_error_impl.h  cpl_errorstate.c  cpl_errorstate.h  cpl_filter_median.c  cpl_fits.h  cpl_func.h.top  cpl_image_basic.h  cpl_image_basic_body.h  cpl_image_basic_impl.h  cpl_image_bpm.c  cpl_image_bpm.h  cpl_image_fft.c  cpl_image_fft_impl.h  cpl_image_filter.c  cpl_image_filter.h  cpl_image_gen.h  cpl_image_io_impl.h  cpl_image_resample.h  cpl_image_stats_body.h  cpl_imagelist_basic.c  cpl_imagelist_io.c  cpl_init.c  cpl_io_fits.h  cpl_macros.h  cpl_mask.c  cpl_mask_binary.h  cpl_mask_defs.h  cpl_mask_impl.h  cpl_math_const.h  cpl_matrix_impl.h  cpl_memory.c  cpl_mpfit.h  cpl_msg.c  (+13 more)
cpl-7.3.2/cplcore/tests/: Makefile.am  cpl_bivector-test.c  cpl_filter-test.c  cpl_filter_body.h  cpl_fits-test.c  cpl_image_basic-test.c  cpl_image_bpm-test.c  cpl_image_io-test.c  cpl_image_resample-test.c  cpl_imagelist_basic-test.c  cpl_matrix-test.c  cpl_median-test.c  (+5 more)
cpl-7.3.2/cpldfs/: Makefile.am  cpl_multiframe.c  cpl_multiframe.h  md5.h
cpl-7.3.2/cpldrs/: Makefile.am  Makefile.in  cpl_detector.c  cpl_fft.c  cpl_fft.h  cpl_fit.c  cpl_fit_body.h  cpl_geom_img_body.h  cpl_photom.h  cpl_ppm.c  cpl_wcs.c  cpl_wcs.h
cpl-7.3.2/cpljava/: Makefile.am  Makefile.in  cpl_gasgano.c  org_eso_cpl_jni_JNIParameterImp.h  org_eso_cpl_jni_JNIRecipe.h
cpl-7.3.2/cpljava/tests/: Makefile.am  Makefile.in
cpl-7.3.2/cplui/: Makefile.am  Makefile.in  cpl_frame.c  cpl_frame.h  cpl_frame_impl.h  cpl_framedata.c  cpl_framedata.h  cpl_frameset.c  cpl_frameset.h  cpl_frameset_io.c  cpl_parameter.c  cpl_parameterlist.c  cpl_plugin.c  cpl_plugin.h  cpl_plugininfo.h  cpl_pluginlist.h  cpl_recipeconfig.c  cpl_recipeconfig.h  cpl_recipedefine.c  cpl_recipedefine.h
cpl-7.3.2/libcext/: Makefile.in  README  aclocal.m4  configure
cpl-7.3.2/libltdl/: Makefile.in
cpl-7.3.2/m4/: omp.m4
pycpl-1.0.3/: .clang-format  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  PKG-INFO  pyproject.toml  setup.cfg  setup.py
pycpl-1.0.3/src/: path_conversion.hpp
pycpl-1.0.3/src/cplcore/: array.cpp  bivector.cpp  coords.hpp  error.hpp  error_bindings.cpp  error_bindings.hpp  filter_bindings.cpp  image.cpp  imagelist.cpp  io_bindings.cpp  io_bindings.hpp  mask.hpp  matrix_bindings.cpp  polynomial.hpp  polynomial_bindings.hpp  property_bindings.hpp  propertylist.cpp  propertylist.hpp  table.cpp  table_bindings.cpp  table_bindings.hpp  type_bindings.cpp  types.hpp  vector_bindings.cpp  vector_bindings.hpp  window_conversion.hpp
pycpl-1.0.3/src/cpldfs/: dfs.hpp
pycpl-1.0.3/src/cpldrs/: apertures.hpp  apertures_bindings.hpp  detector.cpp  fft.hpp  fft_bindings.cpp  fft_bindings.hpp  fit.cpp  fit.hpp  fit_bindings.cpp  geom_img.cpp  geom_img.hpp  geom_img_bindings.hpp  photom.cpp  photom_bindings.cpp  ppm.cpp  wcs.hpp  wlcalib.cpp  wlcalib.hpp  wlcalib_bindings.cpp
pycpl-1.0.3/src/cplui/: frame.hpp  frameset.cpp  parameter.cpp  parameter.hpp  parameterlist.cpp  plugin.hpp  plugin_bindings.cpp
pycpl-1.0.3/tests/: test_regression.py
pycpl-1.0.3/tests/cplcore/: test_image_list.py  test_mask.py  test_matrix.py  test_matrix_ported.py  test_msg.py  test_polynomial.py  test_property.py  test_vector.py
pycpl-1.0.3/tests/cpldfs/: test_dfs.py
pycpl-1.0.3/tests/cpldrs/: test_detector.py  test_fit.py  test_ppm.py  test_wcs.py  test_wlcalib.py
pycpl-1.0.3/tests/cplui/: mock_input.sof  test_frame.py  test_parameter.py  test_parameter_list.py
pycpl-1.0.3/tests/utilities/: regtests.py  rex.py
simple/: index.html
simple/pycpl/: index.html
src/: dump_handler.cpp  dump_handler.hpp  pycpl.cpp
src/cplcore/: array.hpp  bivector.hpp  coords.cpp  error.cpp  errorframe.cpp  errorframe.hpp  filter_bindings.hpp  image.hpp  image_bindings.cpp  image_bindings.hpp  imagelist.hpp  mask.cpp  mask_bindings.cpp  mask_bindings.hpp  matrix.cpp  matrix.hpp  matrix_bindings.hpp  msg.cpp  msg.hpp  msg_bindings.cpp  msg_bindings.hpp  polynomial.cpp  polynomial_bindings.cpp  property.cpp  property.hpp  property_bindings.cpp  table.hpp  type_bindings.hpp  types.cpp  vector.cpp  vector.hpp
src/cpldfs/: dfs.cpp  dfs_bindings.cpp  dfs_bindings.hpp
src/cpldrs/: apertures.cpp  apertures_bindings.cpp  detector.hpp  detector_bindings.cpp  detector_bindings.hpp  fft.cpp  fit_bindings.hpp  geom_img_bindings.cpp  photom.hpp  photom_bindings.hpp  ppm.hpp  ppm_bindings.cpp  ppm_bindings.hpp  wcs.cpp  wcs_bindings.cpp  wcs_bindings.hpp  wlcalib_bindings.hpp
src/cplui/: frame.cpp  frame_bindings.cpp  frame_bindings.hpp  frameset.hpp  parameter_bindings.cpp  parameter_bindings.hpp  parameterlist.hpp  plugin.cpp  plugin_bindings.cpp  plugin_bindings.hpp
src/hdrl/: hdrl_image.cpp  hdrl_image.hpp  hdrl_image_bindings.cpp  hdrl_image_bindings.hpp  hdrl_types.hpp
tests/: conftest.py  test_validation.py
tests/cplcore/: test_bivector.py  test_image.py  test_property_list.py  test_table.py
tests/cpldrs/: test_apertures.py  test_fft.py  test_geom_img.py  test_photom.py
tests/cplui/: mock_recipe.py  test_recipe_param.py
wcslib-8.2.2/Fortran/: GNUmakefile  cel.inc  cel_data.f  cel_f.c  dis.inc  dis_f.c  fitshdr.inc  fitshdr_f.c  getwcstab.inc  lin.inc  lin_data.f  log.inc  prj_f.c  spc.inc  spc_data.f  spc_f.c  sph.inc  sph_f.c  spx_f.c  wcs.inc  wcs_data.f  wcserr_f.c  wcsfix_data.f  wcshdr.inc  wcshdr_data.f  wcsmath.inc  wcsunits_data.f  wcsunits_f.c
wcslib-8.2.2/doxygen/: README  doxextr.l  mainpage.dox
wcslib-8.2.2/pgsbox/: lngvel.f  pgcrfn.f  pgsbox.f  pgtest.f
wcslib-8.2.2/utils/: GNUmakefile  HPXcvt.1  HPXcvt.c  fitshdr.1  sundazel.1  tofits.1  tofits.c  wcsgrid.1  wcsgrid.c  wcsware.c
(+55 files in other folders)
