[project]
name = "pycpl"
version = "0.1.0"
description = "PyCPL, with CPL and dependencies included"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pybind11>=3.0.1",
    "setuptools>=80.9.0",
]
[build-system]
requires = ["setuptools>=70", "wheel", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"
