[project]
name = "pycpl"
version = "0.1.0"
description = "PyCPL, with CPL and dependencies included"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pybind11>=3.0.1",
    "setuptools>=80.9.0",
]
[build-system]
requires = ["setuptools>=70", "wheel", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = "yum install -y autoconf automake libtool"
repair-wheel-command = ""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-build = "brew install autoconf automake libtool"
repair-wheel-command = ""
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.environment]
CMAKE_BUILD_PARALLEL_LEVEL = "4"
