[project]
name = "pycpl"
version = "1.0.3.post2"
description = "Python language bindings for the ESO Common Pipeline Library C libraries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "European Southern Observatory, Australian Astronomical Optics Macquarie", email = "cpl-help@eso.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "numpy",
    "astropy",
]

[project.optional-dependencies]
pandas = ["pandas"]
doc = ["sphinx"]
test = ["pytest", "pandas", "scipy"]

[project.urls]
Homepage = "http://www.eso.org/sci/software/pycpl"
Documentation = "http://www.eso.org/sci/software/pycpl"
Source = "https://ftp.eso.org/pub/dfs/pipelines/libraries/pycpl"
[build-system]
requires = ["setuptools>=70", "wheel", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = "yum install -y autoconf automake libtool"
repair-wheel-command = ""
build = "*manylinux*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["native"]
before-build = "brew install autoconf automake libtool"
repair-wheel-command = ""
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.environment]
CMAKE_BUILD_PARALLEL_LEVEL = "4"
