[metadata]
name = pycpl
version = 1.0.3
license = GPL-3.0-or-later
author = European Southern Observatory, Australian Astronomical Optics Macquarie
author_email = cpl-help@eso.org
description = Python language bindings for the ESO Common Pipeline Library C libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.eso.org/sci/software/pycpl
project_urls = 
	Homepage = http://www.eso.org/sci/software/pycpl
	Documentation = http://www.eso.org/sci/software/pycpl
	Source = https://ftp.eso.org/pub/dfs/pipelines/libraries/pycpl
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: C
	Programming Language :: C++
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Unix
	Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.9
install_requires = 
	numpy
	astropy
zip_safe = False

[options.extras_require]
pandas = pandas
doc = 
	sphinx
test = 
	pytest
	pandas
	scipy

[egg_info]
tag_build = 
tag_date = 0

